# RMLocalization

RMLocalization/: README.md
RMLocalization/localization2D/: CMakeLists.txt  default.rviz  package.xml
RMLocalization/localization2D/data/: default.rviz
RMLocalization/localization2D/launch/: run.launch
RMLocalization/localization2D/map/: RM3D_transform.pcd  RM_transform.pcd
RMLocalization/localization2D/src/: RL2D.cpp
localization2D/: CMakeLists.txt  package.xml
localization2D/include/: ros_cpp.cpp
localization2D/include/localization2D/: RL2D.hpp
localization2D/src/: RL2D.cpp
